GNOME Bugzilla – Bug 595486
Fix clang bugs
Last modified: 2009-09-19 14:54:05 UTC
Fix a number of bugs discovered with clang.
Created attachment 143371 [details] [review] Remove unused variable in spinner
Created attachment 143372 [details] [review] Remove unused variable in bluetooth_client_create_device()
Created attachment 143373 [details] [review] Remove unused variable in create_adapter()
Created attachment 143374 [details] [review] Move _dump_device() to BluetoothClient and use it in the test-client when a device is selected
Created attachment 143375 [details] [review] Add FIXME in obex_agent_request()
Created attachment 143376 [details] [review] Remove unused button variable in applet
Created attachment 143377 [details] [review] Remove unused variable in device selection test
Created attachment 143378 [details] [review] Fix invalid memory access in agent.c Which would happen when long name isn't requested, and there's no name for the device, just the address.
Attachment 143371 [details] pushed as bf5fb81 - Remove unused variable in spinner Attachment 143372 [details] pushed as 8bb8f08 - Remove unused variable in bluetooth_client_create_device() Attachment 143373 [details] pushed as a1c9524 - Remove unused variable in create_adapter() Attachment 143374 [details] pushed as d272168 - Move _dump_device() to BluetoothClient Attachment 143375 [details] pushed as 29a077f - Add FIXME in obex_agent_request() Attachment 143376 [details] pushed as f0d6ac0 - Remove unused button variable in applet Attachment 143377 [details] pushed as 1bfdfc0 - Remove unused variable in device selection test Attachment 143378 [details] pushed as 99b975a - Fix invalid memory access in agent.c