Remove unused variable in spinner

https://bugzilla.gnome.org/show_bug.cgi?id=595486